force-app/main/default/objects/Contact/fields/Contact_Image__c.field-meta.xml
<CustomField>
    <fullName>Contact_Image__c</fullName>
    <description>Used to store a URL pointing to the contact picture.</description>
    <label>Contact Image</label>
    <type>Url</type>
</CustomField>