force-app/main/default/objects/Contact/fields/Contact_Photo__c.field-meta.xml
<CustomField>
    <fullName>Contact_Photo__c</fullName>
    <inlineHelpText>Enter the URL of the image that you want to show</inlineHelpText>
    <label>Contact Photo URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>