force-app/main/default/objects/Contact/fields/DisplayPhoto__c.field-meta.xml
<CustomField>
    <fullName>DisplayPhoto__c</fullName>
    <label>DisplayPhoto</label>
    <type>Url</type>
</CustomField>