force-app/main/default/objects/Contact/fields/OrgUrl__c.field-meta.xml
<CustomField>
    <fullName>OrgUrl__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrgUrl</label>
    <type>Text</type>
</CustomField>