force-app/main/default/objects/Contact/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <label>Profile Picture</label>
    <type>Url</type>
</CustomField>