force-app/main/default/objects/Contact/fields/Push_Date__c.field-meta.xml
<CustomField>
    <fullName>Push_Date__c</fullName>
    <defaultValue>NULL</defaultValue>
    <label>Push Date</label>
    <type>DateTime</type>
</CustomField>